tests/ui/rustdoc/feature-gate-doc_primitive.stderr
error[E0658]: `rustc_doc_primitive` is a rustc internal attribute
  --> $DIR/feature-gate-doc_primitive.rs:1:1
   |
LL | #[rustc_doc_primitive = "usize"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
